# torch_robotics_fork

./: pyproject.toml
torch_robotics/data/urdf/robots/ur5/urdf/: ur5.urdf  ur5.urdf~
torch_robotics/environments/: __init__.py  env_base.py  env_circle_2d.py  env_dense_2d.py  env_grid_circles_2d.py  env_maze_boxes_3d.py  env_narrow_passage_dense_2d.py  env_open_2d.py  env_open_3d.py  env_simple_2d.py  env_spheres_3d.py  env_square_2d.py  env_table_shelf.py  primitives.py
torch_robotics/robots/: __init__.py  multi_robot.py  robot_base.py  robot_disk.py  robot_panda.py  robot_point_mass.py  robot_ur5.py
torch_robotics/tasks/: dynamic_planning_task.py  tasks.py
torch_robotics/torch_kinematics_tree/models/: robots.py
torch_robotics/torch_planning_objectives/fields/: distance_fields.py  dynamic_distance_fields.py
torch_robotics/torch_utils/: spatial_utils.py
